syntax = "proto3";

package obs_remote.v5.scene_items;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service SceneItems {
  // Original: GetSceneItemList
  rpc List(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetGroupSceneItemList
  rpc ListGroup(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneItemTransform
  rpc Transform(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemTransform
  rpc SetTransform(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetSceneItemEnabled
  rpc IsEnabled(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: SetSceneItemEnabled
  rpc SetEnabled(google.protobuf.BoolValue) returns (google.protobuf.Empty);
  // Original: GetSceneItemLocked
  rpc IsLocked(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: SetSceneItemLocked
  rpc SetLocked(google.protobuf.BoolValue) returns (google.protobuf.Empty);
  // Original: GetSceneItemColor
  rpc Color(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemColor
  rpc SetColor(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetSceneItemIndex
  rpc SetIndex(google.protobuf.UInt32Value) returns (google.protobuf.Empty);
  // Original: CreateSceneItem
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteSceneItem
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DuplicateSceneItem
  rpc Duplicate(google.protobuf.Empty) returns (google.protobuf.Empty);
}
