syntax = "proto3";

package obs_remote.scene_items;

service SceneItemsService {
  // Original: GetSceneItemList
  rpc List(ListRequest) returns (ListResponse);
  // Original: GetGroupSceneItemList
  rpc ListGroup(ListGroupRequest) returns (ListGroupResponse);
  // Original: GetSceneItemTransform
  rpc Transform(TransformRequest) returns (TransformResponse);
  // Original: SetSceneItemTransform
  rpc SetTransform(SetTransformRequest) returns (SetTransformResponse);
  // Original: GetSceneItemEnabled
  rpc IsEnabled(IsEnabledRequest) returns (IsEnabledResponse);
  // Original: SetSceneItemEnabled
  rpc SetEnabled(SetEnabledRequest) returns (SetEnabledResponse);
  // Original: GetSceneItemLocked
  rpc IsLocked(IsLockedRequest) returns (IsLockedResponse);
  // Original: SetSceneItemLocked
  rpc SetLocked(SetLockedRequest) returns (SetLockedResponse);
  // Original: GetSceneItemColor
  rpc Color(ColorRequest) returns (ColorResponse);
  // Original: SetSceneItemColor
  rpc SetColor(SetColorRequest) returns (SetColorResponse);
  // Original: SetSceneItemIndex
  rpc SetIndex(SetIndexRequest) returns (SetIndexResponse);
  // Original: CreateSceneItem
  rpc Create(CreateRequest) returns (CreateResponse);
  // Original: DeleteSceneItem
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  // Original: DuplicateSceneItem
  rpc Duplicate(DuplicateRequest) returns (DuplicateResponse);
}

message ListRequest {}

message ListResponse {}

message ListGroupRequest {}

message ListGroupResponse {}

message TransformRequest {}

message TransformResponse {}

message SetTransformRequest {}

message SetTransformResponse {}

message IsEnabledRequest {}

message IsEnabledResponse {}

message SetEnabledRequest {}

message SetEnabledResponse {}

message IsLockedRequest {}

message IsLockedResponse {}

message SetLockedRequest {}

message SetLockedResponse {}

message ColorRequest {}

message ColorResponse {}

message SetColorRequest {}

message SetColorResponse {}

message SetIndexRequest {}

message SetIndexResponse {}

message CreateRequest {}

message CreateResponse {}

message RemoveRequest {}

message RemoveResponse {}

message DuplicateRequest {}

message DuplicateResponse {}
